force-app/main/default/objects/Trigger_Setup__c/Trigger_Setup__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows for activation and deactivation of Apex Triggers.</description>
    <label>Trigger Setup</label>
</CustomObject>