force-app/main/default/objects/Trigger_Setup__c/fields/All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all triggers when checked.</description>
    <inlineHelpText>Allows for deactivation of all triggers when checked.</inlineHelpText>
    <label>All Triggers</label>
    <type>Checkbox</type>
</CustomField>