force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_AccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all AccountTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all AccountTrigger when checked.</inlineHelpText>
    <label>Deactivate AccountTrigger</label>
    <type>Checkbox</type>
</CustomField>