force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_AssignedResourceTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_AssignedResourceTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all AssignedResourceTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all AssignedResourceTrigger when checked.</inlineHelpText>
    <label>Deactivate AssignedResourceTrigger</label>
    <type>Checkbox</type>
</CustomField>