force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_AttendeeTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_AttendeeTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all AttendeeTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all AttendeeTrigger when checked.</inlineHelpText>
    <label>Deactivate AttendeeTrigger</label>
    <type>Checkbox</type>
</CustomField>