force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all Contact Trigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all Contact Trigger when checked.</inlineHelpText>
    <label>Deactivate ContactTrigger</label>
    <type>Checkbox</type>
</CustomField>