force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_Course_Reminder_Batch__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Course_Reminder_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will disabled the &quot;Service Appointment Weekly Batch&quot;</description>
    <label>Deactivate Course Reminder Batch</label>
    <type>Checkbox</type>
</CustomField>