force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_EvaluationTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_EvaluationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all EvaluationTirgger when checked.</description>
    <inlineHelpText>Allows for deactivation of all EvaluationTirgger when checked.</inlineHelpText>
    <label>Deactivate EvaluationTrigger</label>
    <type>Checkbox</type>
</CustomField>