force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_OrderProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_OrderProductTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivate OrderProductTrigger</label>
    <type>Checkbox</type>
</CustomField>