force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_OrderTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_OrderTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all orderTirgger when checked.</description>
    <inlineHelpText>Allows for deactivation of all orderTirgger when checked.</inlineHelpText>
    <label>Deactivate OrderTrigger</label>
    <type>Checkbox</type>
</CustomField>