force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_QuoteLineTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_QuoteLineTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all QuoteLineTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all QuoteLineTrigger when checked.</inlineHelpText>
    <label>Deactivate QuoteLineTrigger</label>
    <type>Checkbox</type>
</CustomField>