force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_QuoteTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_QuoteTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all quoteTirgger when checked.</description>
    <inlineHelpText>Allows for deactivation of all quoteTirgger when checked.</inlineHelpText>
    <label>Deactivate QuoteTrigger</label>
    <type>Checkbox</type>
</CustomField>