force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_RainchecksTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_RainchecksTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all RainchecksTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all RainchecksTrigger when checked.</inlineHelpText>
    <label>Deactivate RainchecksTrigger</label>
    <type>Checkbox</type>
</CustomField>