force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_ServiceAppointmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_ServiceAppointmentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all ServiceAppointmentTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all ServiceAppointmentTrigger when checked.</inlineHelpText>
    <label>Deactivate ServiceAppointmentTrigger</label>
    <type>Checkbox</type>
</CustomField>