force-app/main/default/objects/Trigger_Setup__c/fields/Deactivate_TimeOffRequestTrigger__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_TimeOffRequestTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for deactivation of all TimeOffRequestTrigger when checked.</description>
    <inlineHelpText>Allows for deactivation of all TimeOffRequestTrigger when checked.</inlineHelpText>
    <label>Deactivate TimeOffRequestTrigger</label>
    <type>Checkbox</type>
</CustomField>